Added optional static content HTTP-GET request filter in rest.yaml